--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -78,6 +78,7 @@
     "/images/floorplans/dune.svg": "/images/floorplans/dune.svg",
     "/images/floorplans/l1.svg": "/images/floorplans/l1.svg",
     "/images/floorplans/l2.svg": "/images/floorplans/l2.svg",
+    "/images/floorplans/l3.svg": "/images/floorplans/l3.svg",
     "/images/floorplans/logo.svg": "/images/floorplans/logo.svg",
     "/images/floorplans-bg.jpg": "/images/floorplans-bg.jpg",
     "/images/galleries/a1.jpg": "/images/galleries/a1.jpg",
